src/objects/PADefaults__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To store defaults for PA form picklists</description>
    <fields>
        <fullName>Bio_Default_Text__c</fullName>
        <inlineHelpText>To fix IE 11 issues with rendering HTML in inputtextarea fields</inlineHelpText>
        <label>Bio Default Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Cohort</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Country_Error__c</fullName>
        <label>No Country Error</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Org_Type_Error_Msg__c</fullName>
        <label>No Org Type Error Msg</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Salutation_Error_Msg__c</fullName>
        <label>No Salutation Error Msg</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values__c</fullName>
        <label>Picklist Values</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PA Defaults</label>
</CustomObject>